# DayTrender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
algorithms/: ltline.cpp  simplema.alg  simplema.cpp  simplesr.alg  test.h  testfile.dt  testinc.dt  utline.cpp
algorithms/include/: actionenum.h  algodefs.h  algotypes.h  candle.h  line.h
algorithms/indicators/: a.ind  atline.ind  b.ind  c.ind  d.ind  ema.ind  goobo.ind  last.ind  ltline.ind  midline.ind  sma.ind  utline.ind
algorithms/src/: indicatortester.cpp  indicatortester.h  simplema.cpp  simplesr.cpp  simplesr.h
algorithms/src/indicators/: atline.cpp  atline.h  ema.h  indicator.h  ltline.h  sma.cpp  sma.h  utline.h
algorithms/src/math/: line.cpp  line.h
ext/algorithms/: .gitignore  goobo.cpp  simplema.cpp  simplesr.alg
ext/algorithms/indicators/: utline.ind
ext/clients/: .gitignore  oanda.cpp
ext/strategies/: simplema.cpp
include/: daytrender.h
include/api/: action.h  client.h  client_api.h  interval.h  strategy.h  strategy_api.h  versions.h
include/data/: account.h  asset.h  candle.h  chart.h  paperaccount.h  portfolio.h  position.h  pricehistory.h  result.h  strategydata.h  tradesystem.h
include/interface/: backtest.h
include/util/: dtassert.h
lib/hlog/include/: hlog.h
lib/pluginlib/: plugin.h
lib/tinyplug/include/: tinyplug.h
res/: assets.json
res/http/: style.css
resources/http/: index.html  script.js
src/: daytrender.cpp  daytrender.h  main.cpp
src/api/: action.cpp  action.h  algodefs.h  algorithm.cpp  algorithm.h  alpacaclient.cpp  alpacaclient.h  api_versions.h  asset.cpp  asset.h  client.cpp  client.h  clientdefs.h  oandaclient.cpp  oandaclient.h  paperaccount.cpp  paperaccount.h  portfolio.cpp  portfolio.h  restclient.cpp  restclient.h  strategy.cpp  strategy.h  strategydefs.h  tradealgorithm.cpp  tradealgorithm.h  tradeclient.cpp  tradeclient.h
src/data/: account.cpp  accountinfo.cpp  accountinfo.h  action.cpp  action.h  algodefs.h  algorithmdata.cpp  algorithmdata.h  algotypes.h  asset.cpp  asset.h  assetinfo.cpp  assetinfo.h  candle.cpp  candle.h  chart.cpp  clientdefs.h  clienttypes.h  indicator.cpp  indicator.h  mathutil.h  paperaccount.cpp  paperaccount.h  portfolio.cpp  position.cpp  pricehistory.cpp  strategydata.cpp  strategydata.h  tradealgorithm.cpp  tradealgorithm.h  tradesystem.cpp
src/dtbuild/: algorithm.def  dtbuild.cpp  dtbuild.h  generator.cpp  generator.h  indicator.def  lexer.cpp  lexer.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  symbols.h
src/interface/: backtest.cpp  backtest.h  interface.cpp  interface.h  server.cpp  server.h  shell.cpp  shell.h  webinterface.html  webinterface.inc
src/test/: result.cpp  types.cpp
src/util/: backtest.cpp  impl.cpp  jsonutil.cpp  jsonutil.h  libcomp.cpp  strutil.cpp  strutil.h
